--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           PAGE=0
           URLS_BATCHES="[]"
-          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg base_url "$BASE_URL,$BASE_URL" '. + [$base_url]')
+          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg base_url "\"$BASE_URL\"" '. + [$base_url]')
 
           while true; do
             RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$PAGE&sort=alphabetically")
@@ -34,7 +34,6 @@ jobs:
             URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
-          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg base_url "$BASE_URL" '. + [$base_url]')
           echo "urls_batches=$URLS_BATCHES"
           URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -c 'map(fromjson)')
           echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
