--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -181,6 +181,7 @@ jobs:
 
           # Read and parse the JSON file, sorting URLs alphabetically
           jq -r '.[] | "\(.url),\(.scores.performance),\(.scores.accessibility),\(.scores.bestPractices),\(.scores.seo),\(.localReport)"' $RESULTS_FILE | sort -t, -k1,1 | while IFS=, read -r url performance accessibility bestPractices seo localReport; do
+            echo "Processing $localReport"
             reportFile=$(basename "$localReport")
 
             echo "<tr>
