--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -89,7 +89,7 @@ jobs:
             <title>Lighthouse Audit Summary</title>
             <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">
             <script>
-              const rowsPerPage = 10;
+              const rowsPerPage = 20;
               let currentPage = 1;
 
               function paginateTable() {
@@ -187,7 +187,7 @@ jobs:
               <td class=\"numeric\">$accessibility</td>
               <td class=\"numeric\">$bestPractices</td>
               <td class=\"numeric\">$seo</td>
-              <td class=\"numeric\"><a href=\"$reportFile\">View Report</a></td>
+              <td class=\"numeric\"><a href=\"$reportFile\" target=\"_blank\">View Report</a></td>
             </tr>" >> $SUMMARY_FILE
           done
 
