--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -2,6 +2,8 @@ name: Lighthouse Accessibility CI
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   API_URL: "https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&isRESTClient=false"
@@ -18,9 +20,8 @@ jobs:
         id: collect-urls
         run: |
           PAGE=0
-          EXTERNAL_URLS="${BASE_URL},${BASE_URL}/security-monitor,${BASE_URL}/release-preview"
           URLS_BATCHES="[]"
-          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg external_urls "\"$EXTERNAL_URLS\"" '. + [$external_urls]')
+          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg external_urls "\"${{ vars.ACCESSIBILITY_CHECK_EXTERNAL_URLS }}\"" '. + [$external_urls]')
 
           while true; do
             RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$PAGE&sort=alphabetically")
@@ -35,6 +36,9 @@ jobs:
             URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
+          last_element = URLS_BATCHES[-1]
+          URLS_BATCHES[-1] = last_element.rstrip("\"") + ",$BASE_URL\""
+          echo "$URLS_BATCHES"
           URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -c 'map(fromjson)')
           echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
 
