--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -36,8 +36,7 @@ jobs:
             URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
-          last_element = URLS_BATCHES[-1]
-          URLS_BATCHES[-1] = last_element.rstrip("\"") + ",$BASE_URL\""
+          URLS_BATCHES[-1]="${URLS_BATCHES[-1]%,}\"",$BASE_URL\""
           echo "$URLS_BATCHES"
           URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -c 'map(fromjson)')
           echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
