--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           PAGE=0
           URLS_BATCHES="[]"
-          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg external_urls "\"${{ vars.ACCESSIBILITY_CHECK_EXTERNAL_URLS }}\"" '. + [$external_urls]')
+          URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg external_urls "\"$BASE_URL,${{ vars.ACCESSIBILITY_CHECK_EXTERNAL_URLS }}\"" '. + [$external_urls]')
 
           while true; do
             RESPONSE=$(curl -s "$API_URL&size=$BATCH_SIZE&page=$PAGE&sort=alphabetically")
@@ -36,7 +36,6 @@ jobs:
             URLS_BATCHES=$(echo "$URLS_BATCHES" | jq --arg batch "$BATCH_URLS" '. + [$batch]')
             PAGE=$((PAGE + 1))
           done
-          URLS_BATCHES[-1]="${URLS_BATCHES[-1]%,}\"",$BASE_URL\""
           echo "$URLS_BATCHES"
           URLS_BATCHES=$(echo "$URLS_BATCHES" | jq -c 'map(fromjson)')
           echo "urls_batches=$URLS_BATCHES" >> "$GITHUB_OUTPUT"
